--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <h3>┑(￣Д ￣)┍</h3>
-    <p>I am upgrading this site. Coming soon...</p>
-    <cite>Q.X.</cite>
+    <p>🚧 This site is under construction. Please visit the NECC, member of the NESIP.</p>
+    <cite>qq</cite>
   </body>
 </html>
